[tool.poetry]
name = "repl-nix-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_python"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
telebot = "^0.0.5"
bs4 = "^0.0.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
